feat: backend: university to user profiles
